alles ohne xmlet.xsdparser